# Poetry_Project

./: LICENSE  pyproject.toml
test_dict/: __init__.py  test_dict.py
tests/: test_test_dict.py
