[tool.poetry]
name = "testpoetry"
version = "0.1.0"
description = ""
authors = ["Snehik <snehik1989@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
black = "^24.4.2"
isort = "^5.13.2"
bandit = "^1.7.9"
safety = "^3.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
